--- a/manager/src/main/resources/application-dev.yml
+++ b/manager/src/main/resources/application-dev.yml
@@ -6,7 +6,7 @@ logging:
 
 spring:
   datasource:
-    url: jdbc:mysql://127.0.0.1:3306/sys_user?useSSL=false&allowMultiQueries=true&allowPublicKeyRetrieval=true
+    url: jdbc:mysql://127.0.0.1:3306/test?useSSL=false&allowMultiQueries=true&allowPublicKeyRetrieval=true
     username: root
     password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
